# DustyKB

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dokploy.yml  docker-compose.override.example.yml  docker-compose.yml  rag_test_guide.md  streaming_ops_notes.txt
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  main.py  schemas.py
apps/api/app/services/: answer_copy.py  chunk_store.py  chunking.py  documents.py  hybrid.py  llm.py  metadata.py  models.py  qdrant_store.py  query_logs.py  rag.py  store.py
apps/api/tests/: test_answer_copy.py  test_auth.py  test_chunk_store.py  test_chunking.py  test_documents.py  test_embedding_batch.py  test_hybrid.py  test_metadata_store.py
apps/my-app/: package.json  pnpm-lock.yaml
apps/my-app/app/: globals.css  layout.tsx
apps/my-app/components/: dashboard-nav.tsx  highlight-text.tsx  query-provider.tsx
apps/my-app/components/dashboard/: chat-panel.tsx  dashboard-header.tsx  dashboard-provider.tsx  document-panel.tsx  documents-page-client.tsx  empty-knowledge-base-state.tsx  history-page-client.tsx  history-panel.tsx  legacy-dashboard-redirect.tsx  system-page-client.tsx  use-document-controls.ts  use-knowledge-base-controls.ts  workspace-context-panel.tsx
apps/my-app/lib/: api.ts
apps/web/: .dockerignore  Dockerfile  package.json
apps/web/app/: layout.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/components/: access-gate.tsx  dashboard-nav.tsx  markdown-answer.tsx
apps/web/lib/: api.ts
(+21 files in other folders)
