[project]
name = "kb-api"
version = "0.1.0"
description = "Chinese knowledge base API with Qdrant and DashScope"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "qdrant-client>=1.12.0",
  "openai>=1.55.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.17",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
